// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TargetDetails/Stems Multiple Stems 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <ul>
    <li>
      <p>
        Stem Description Two
        <style
          jsx={true}
        >
          
      p {
        margin-top: 1em;
      }
    
        </style>
      </p>
    </li>
    <li>
      <p>
        Stem Description Three
        <style
          jsx={true}
        >
          
      p {
        margin-top: 1em;
      }
    
        </style>
      </p>
    </li>
  </ul>
</div>
`;

exports[`Storyshots TargetDetails/Stems One Stem 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <ul>
    <li>
      <p>
        Stem Description One
        <style
          jsx={true}
        >
          
      p {
        margin-top: 1em;
      }
    
        </style>
      </p>
    </li>
  </ul>
</div>
`;
